Fixed logo align

--- a/src/components/main-header/main-header.styl
+++ b/src/components/main-header/main-header.styl
@@ -14,6 +14,8 @@
     justify-content space-between
     height 44px
   &__logo
+    display flex
+    align-items center
     @media (max-width 470px)
       .logo__text
         display none
